crates/rtd-display/src/v2/snapshots/rtd_display__v2__parser__tests__decimal_literal_only_underscores.snap
---
source: crates/rtd-display/src/v2/parser.rs
expression: "strands(r#\"{___u64}\"#)"
---
{ ___u64
}@0
