crates/rtd-display/src/v2/snapshots/rtd_display__v2__parser__tests__double_arrow_missing_index.snap
---
source: crates/rtd-display/src/v2/parser.rs
expression: "strands(r#\"{foo=>}\"#)"
---
Error: Unexpected '}' at byte offset 6, expected '['
