crates/rtd-display/src/v2/snapshots/rtd_display__v2__parser__tests__enum_literal_named_trailing.snap
---
source: crates/rtd-display/src/v2/parser.rs
expression: "strands(r#\"{0x1::option::Option<u64>::Some#1 { value: 42, other: 43,\"#,)"
---
Error: Unexpected end-of-string, expected one of an identifier, or '}'
